<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
    	android:id="@+id/header_image_detail"
        android:layout_width="fill_parent"
        android:layout_height="70dip"
        android:background="@drawable/contact_header"
        android:orientation="horizontal"
        android:padding="5dip" >    
    <ImageView
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/contact_back"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name" />
</RelativeLayout> 
    <TextView 
         android:id="@+id/eventTitleHead"
         android:layout_width="fill_parent"
         android:layout_height="40dip"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:text="@string/strTempTitle"
         android:textColor="#993333"
         android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="sans">
     </TextView>
    
	<TextView
        android:id="@+id/contactDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/contactDetails" >
    </TextView>
    
    
    
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="5dip">
   <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" 
        android:gravity="center">
    <TextView
        android:id="@+id/contactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingTop="25dip"
        android:text="@string/contactNumber"
        android:textStyle="bold" >
    </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dip" 
        android:layout_below="@+id/topLayout"
        android:gravity="center">
    
    <ImageButton
                android:id="@+id/call_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/call_button"
                android:paddingRight="20dip"
                android:contentDescription="@string/app_name"
                android:background="@null"/>
    
    <ImageButton
                android:id="@+id/email_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/email_button"
                android:contentDescription="@string/app_name"
                android:background="@null"/>
    </LinearLayout>
    </RelativeLayout>
</LinearLayout>


