<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">
    
    <RelativeLayout
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:background="@drawable/contact_header"
        android:orientation="horizontal"
        android:padding="5dip" >
        
        <ImageView
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/contact_back"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name" />
            
    </RelativeLayout>
    
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:id="@+id/eventTitleHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:paddingBottom="2dip"
            android:textColor="#040404"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" 
            android:text="@string/sunovaTitle" />
    </RelativeLayout>
	<TextView
        android:id="@+id/infoDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingBottom="15dip"
        android:text="@string/sunovaInfoDetails" >
    </TextView>
	
	<TextView
        android:id="@+id/contactDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/sunovaDetails" >
    </TextView>
    
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="5dip">
   <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" 
        android:gravity="center">
    <TextView
        android:id="@+id/contactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingTop="5dip"
        android:text="@string/sunovaNumber"
        android:textStyle="bold" >
    </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/middleLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip" 
        android:layout_below="@+id/topLayout"
        android:gravity="center">
   	<TextView
        android:id="@+id/moreDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:text="@string/moreInfo" >
    </TextView> 
   	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dip" 
        android:layout_below="@+id/middleLayout"
        android:gravity="center">
    
    <ImageButton
                android:id="@+id/facebook_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:paddingRight="10dip"
                android:contentDescription="@string/app_name"
                android:background="@null"/>
    
    <ImageButton
                android:id="@+id/twitter_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter"
                android:paddingRight="10dip"
                android:contentDescription="@string/app_name"
                android:background="@null"/>
    
    <ImageButton
                android:id="@+id/website_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/website"
                android:paddingRight="10dip"
                android:contentDescription="@string/app_name"
                android:background="@null"/>
    
    <ImageButton
                android:id="@+id/map_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/map"
                android:contentDescription="@string/app_name"
                android:background="@null"/>
    </LinearLayout>
    </RelativeLayout>
    <ImageView 
        android:id="@+id/sunivaImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sunova"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"/>
</LinearLayout>


